--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.akhramovichsa.pong"
-    android:versionCode="2"
-    android:versionName="1.2" >
+    android:versionCode="4"
+    android:versionName="1.2.2" >
+
+    <supports-screens android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true" android:anyDensity="true" />
 
     <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="23" />
+
+    <!-- uses-feature android:name="android.hardware.screen.portrait" android:required="false" / -->
+    <uses-feature android:name="android.hardware.telephony" android:required="false" />
+    <uses-feature android:name="android.hardware.location" android:required="false" />
+    <uses-feature android:name="android.hardware.location.gps" android:required="false" />
+    <uses-feature android:name="android.hardware.microphone" android:required="false" />
 
     <application
         android:allowBackup="true"
